# Motion-Capture

./: .gitignore  Readme.md  align.py  circle2rect.py  concat.py  copy_images.py  cp_img.py  detect.py  equi2pers.py  find_index.py  gen_digits.py  img2vid.py  mmpose_infer.py  pyproject.toml  rect2circle.py  refine.py  requirements-alliance.txt  requirements.txt  save.py  sync.py  test.py  tmp_config.yml  undistort.py  vid2gif.py  vis_2d.py  vis_compare.py
.cursor/rules/: disable-superpowers.mdc  reconstruction-dev.mdc
apps/calibration/: COORDINATE_ANALYSIS.md  Readme.md  _bootstrap.py  ba_by_colmap.py  calib_extri.py  calib_intri.py  charuco_board_presets.py  chessboard_ba_colmap.py  chessboard_ba_scipy.py  chessboard_sfm_ba.py  create_marker.py  detect_calibration_board.py  detect_charuco.py  detect_chessboard.py  generate_charuco_board.py  refine_extri_global.py  vis_chess_sfm_ba.py  vis_stereo_pairs.py
apps/demo/: mocap.py  mv1p.py  mv1p_bundle_adjustment.py  mv1p_triangulate_overlay.py  vis_2d_bodyhand.py  vis_2d_only.py
apps/postprocess/: render.py  vis_pointcloud.py
apps/preprocess/: extract_image.py  extract_keypoints.py  extract_mask.py  extract_pointcloud.py
apps/reconstruction/: PROJECT.md  README.md  RECONSTRUCTION_PIPELINE.md  STAGES_EXPLAINED.md  STATUS.md  clean_pointcloud.py  dense_reconstruct.py  estimate_depths.py  export_colmap.py  generate_masks.py  pointcloud_to_mesh.py  preprocess_segment_sam3.py  render_mesh_turntable.py  run_3dgs.py  run_pipeline.py  (+4 more)
config/: mocap_index.yml
notes/: extri.yml  intri.yml
scripts/: check_planB_status.sh
(+150 files in other folders)
